added linking and scroll

--- a/src/Components/NavigationBar/NavigationBar.css
+++ b/src/Components/NavigationBar/NavigationBar.css
@@ -17,3 +17,12 @@
   font-size: 22px;
   cursor: pointer;
 }
+
+.nav-menue p {
+  cursor: pointer;
+}
+
+.AnchorLink {
+  text-decoration: none;
+  color: white;
+}
