--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -150,6 +150,12 @@
   margin: 0;
 }
 
+@media (min-width: 1401px) {
+  .mywork {
+    max-width: 80%;
+  }
+}
+
 @media (max-width: 768px) {
   .mywork {
     padding: 60px 30px;
