--- a/src/Components/Skill&Experience/experience.css
+++ b/src/Components/Skill&Experience/experience.css
@@ -2,7 +2,10 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  padding: 2rem;
+  padding: 100px 80px;
+  max-width: 1400px;
+  margin: 0 auto;
+  position: relative;
 }
 
 .section-title {
@@ -192,6 +195,12 @@
   margin-top: 0.5rem;
 }
 
+@media (min-width: 1401px) {
+  .top-container {
+    max-width: 80%;
+  }
+}
+
 /* Additional Responsive Adjustments */
 @media (max-width: 768px) {
   .columns-container {
@@ -257,3 +266,4 @@
     font-size: 0.8rem;
   }
 }
+
